# lichess-username-extractor

./: Cargo.toml  README.md
src/: main.rs  visitor.rs
