[package]
edition = "2021"
name = "username-extractor"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4"
flate2 = "1.0"
lz4 = "1.23"
pgn-reader = "0.22" # should be kept in sync with shakmaty
rustc-hash = "1"
shakmaty = "0.23"
xz2 = "0.1"
zstd = "0.12"
